--- a/app/elements/pre-apps/pre-apps.html
+++ b/app/elements/pre-apps/pre-apps.html
@@ -1425,7 +1425,7 @@
       },
       getmapvalue:function(){
         var str = localStorage.getItem("map_point");
-        alert(JSON.stringify(str));
+        // alert(JSON.stringify(str));
         var str_array = str.split(',');
 
         // for(var i = 0; i < str_array.length; i++) {
