--- a/app/elements/prospectousfee-card/prospectousfee-card.html
+++ b/app/elements/prospectousfee-card/prospectousfee-card.html
@@ -48,8 +48,8 @@
                    </paper-listbox>
         </div>
         <div class="col-md-6" style="margin-top: 5%;">
-        <paper-checkbox id="applnfeecurrentyear" on-change="FnCurrentHandler" checked style="margin-left: 5%;">Current Year</paper-checkbox>
-        <paper-checkbox id="applnfeenextyear" on-change="FnNextHandler" style="margin-left: 5%;">Next Year</paper-checkbox>
+        <paper-checkbox id="applnfeecurrentyear" on-change="FnCurrentHandler" style="margin-left: 5%;">Current Year</paper-checkbox>
+        <paper-checkbox checked id="applnfeenextyear" on-change="FnNextHandler" style="margin-left: 5%;">Next Year</paper-checkbox>
         </div>
      </div>
 
@@ -135,16 +135,32 @@
           var y=date.getFullYear();  
           var m=date.getMonth();
           var d=date.getDate(); 
+          // if(m<4){ 
+          // var y1=y-1;
+          // var y2=y;  
+          // academicyear="AY-"+y1+"-"+y2;
+          // } 
+          // else{
+          // var y1=y;
+          // var y2=y+1;  
+          // academicyear="AY-"+y1+"-"+y2;
+          // }
+          var academicyear=""; 
+          var date=new Date();
+          var y=date.getFullYear();  
+          var m=date.getMonth();
+          var d=date.getDate(); 
           if(m<4){ 
-          var y1=y-1;
-          var y2=y;  
+          var y1=(y-1)+1;
+          var y2=y+1;  
           academicyear="AY-"+y1+"-"+y2;
           } 
           else{
-          var y1=y;
-          var y2=y+1;  
+          var y1=y+1;
+          var y2=y+1+1;  
           academicyear="AY-"+y1+"-"+y2;
           }
+          // localStorage.setItem("curr_sess_academicyear",academicyear);
           localStorage.setItem("curr_sess_academicyear",academicyear); 
       },  
       FnCurrentHandler:function(e){
@@ -156,6 +172,16 @@
           var y=date.getFullYear();  
           var m=date.getMonth();
           var d=date.getDate(); 
+          // if(m<4){ 
+          // var y1=y-1;
+          // var y2=y;  
+          // academicyear="AY-"+y1+"-"+y2;
+          // } 
+          // else{
+          // var y1=y;
+          // var y2=y+1;  
+          // academicyear="AY-"+y1+"-"+y2;
+          // }
           if(m<4){ 
           var y1=y-1;
           var y2=y;  
@@ -181,6 +207,16 @@
           var y=date.getFullYear();  
           var m=date.getMonth();
           var d=date.getDate(); 
+          // if(m<4){ 
+          // var y1=(y-1)+1;
+          // var y2=y+1;  
+          // academicyear="AY-"+y1+"-"+y2;
+          // } 
+          // else{
+          // var y1=y+1;
+          // var y2=y+1+1;  
+          // academicyear="AY-"+y1+"-"+y2;
+          // }
           if(m<4){ 
           var y1=(y-1)+1;
           var y2=y+1;  
@@ -288,8 +324,8 @@
         this.enquiryarr=[];
         document.querySelector('#waiveoffhandler').checked=false;
         this.querySelector('#prospectinput').style.visibility='hidden';
-        document.querySelector('#applnfeenextyear').checked=false;
-        document.querySelector('#applnfeecurrentyear').checked=true;
+        document.querySelector('#applnfeenextyear').checked=true;
+        document.querySelector('#applnfeecurrentyear').checked=false;
       },
       callService:function(){
         this.$.appregfeeservice.fetchallstudentenquirysearchService();
