--- a/app/elements/pdccheques-report-card/pdccheques-report-card.html
+++ b/app/elements/pdccheques-report-card/pdccheques-report-card.html
@@ -16,9 +16,9 @@
                 <div class="col-md-2" style="margin-top: 2%;">
                   <fromdate-icon-pickercard></fromdate-icon-pickercard>
                 </div>
-                <div class="col-md-1" style="margin-top: 2%;margin-left: -3%;">
-                  <todate-icon-pickercard></todate-icon-pickercard>
-                </div>
+                <!-- <div class="col-md-1" style="margin-top: 2%;margin-left: -3%;"> -->
+                  <!-- <todate-icon-pickercard></todate-icon-pickercard> -->
+                <!-- </div> -->
                 <div class="col-md-1" style="margin-top: 2.5%;margin-left: 10%;">
                   <paper-button style="height:30px;text-transform: none;" on-click="FnView" class="btn btn-primary">View</paper-button>
                 </div>
@@ -50,7 +50,7 @@
       <!-- <tr><th colspan="11" style="text-align: right;">Total Amount: &nbsp;&nbsp;{{totalamount}}</th></tr> -->
       </tbody>
     </table>    
-        <div style='margin-left: 30%;'>
+        <div style='margin-left: 70%;'>
     <table>
     <tr>
     <th>Total no of cheques: </th><th style="width: 3%;"></th><th>{{noofstudents}}</th>
